# letter-cast

./: .gitignore  README.md  pyproject.toml
config/: .env.example  settings.example.yaml
docs/: architecture.md  env_setup.md  initial-spec.md  tech_stack.md  tech_stack2.md  workflow.md
src/: __init__.py  check_setup.py  config.py  logger.py  main.py  models.py
src/automator/: __init__.py  notebooklm.py
src/collector/: __init__.py  gmail_auth.py  gmail_collector.py  web_collector.py
src/database/: repository.py
src/delivery/: __init__.py  telegram.py
tests/: test_config.py  test_models.py  test_repository.py
